# Valory

./: .env.example  .eslintrc.json  .gitignore  .prettierrc  .prettierrc.json  README.md  components.d.ts  eslint.config.js  eslint.config.mjs  index.html  key.html  package-lock.json  package.json  postcss.config.js  readme.md  tsconfig.json  vite.config.js  vite.config.ts
.github/workflows/: master.yml
backend/: .gitignore  Pipfile  README.md  alembic.ini  db.py  main.py  models.py  pyproject.toml  readme.md  schemas.py  settings.py
backend/app/: config.py  database.py  db.py  settings.py
backend/app/api/: __init__.py
backend/app/api/v1/endpoints/: overlay.py
backend/app/crud/: overlay.py
backend/app/db/: session.py
backend/app/migrations/: env.py  script.py.mako
backend/app/models/: overlay.py  overlays.py  users.py
backend/app/routers/: __init__.py  overlays.py
backend/app/routers/auth/: __init__.py  twitch.py
backend/app/schemas/: overlay.py  overlays.py  users.py
css/: main.css  overlay.css
frontend/: .eslintrc.cjs  README.md  components.d.ts  eslint.config.js  index.html  package.json  readme.md  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.vue  i18n.ts  main.ts
js/: main.js  overlay.js
overlay/: index.html
src/: App.vue  auto-imports.d.ts  i18n.js  i18n.ts  index.css  main.js  main.ts
src/assets/: style.scss  variables.scss
src/components/: Footer.vue  FooterItem.vue  HeaderItem.vue  Highlights.vue  HighlightsItem.vue  Overlay.vue  OverlayItem.vue
src/css/: main.css
src/data/: riotIds.json
src/js/: main.js  overlay.js
src/locales/: de.json  en.json  jp.json  kz.json  ru.json  ua.json
src/router/: index.js  index.ts
src/scss/: main.scss  overlay.scss  variables.scss
stores/: settingsStore.ts
(+111 files in other folders)
